--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,7 +2,7 @@
 span id="answer-block-#{answer.id}"
   span id="answer-errors-#{answer.id}"
   
-  .hstack.gap-2.border.border-info.m-1 
+  .hstack.gap-2.border.border-info.m-1.row 
     -if answer.selected
       .bg-success.conteniar-lg.col-md-10.mx-auto style="--bs-bg-opacity: .25"
         br= "Best answer"
@@ -14,8 +14,18 @@ span id="answer-block-#{answer.id}"
       = render partial: 'shared/rating', locals: { voteable: answer} 
       -if user_signed_in? && !current_user.author?(answer) 
         =render partial: 'shared/vote', locals: { voteable: answer}
+  .row
+    div class ="comments-answer-#{ answer.id } col-md-12 row"
+      h3 Comments
+      = render  "shared/comment_form", commentable: answer
+      .comments-slide.col-md-2
+      .comments.col-md-10.mx-auto
+        = render partial: "/shared/comment", collection: answer.comments
+
   .conteniar-sm.col-md-12.mx-auto    
     =render 'answers/nav'
+
+
 
   .container-xl.bg-secondary style="--bs-bg-opacity: .15"
     = form_with model: answer, class: 'hidden pb-2 mb-4', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
