--- a/app/views/shared/_comment_form.html.slim
+++ b/app/views/shared/_comment_form.html.slim
@@ -1,10 +1,14 @@
 .comment-form-block.container-fluid.d-block
   -if current_user
-    = link_to 'Leave comment', @comment, class: 'new-comment-link', data: { commentable_id: @commentable.id }
+    = link_to 'Leave comment', commentable, 
+      class: 'new-comment-link', 
+      data: { commentable_id: commentable.id,
+              block: commentable.class.name.downcase }
     
 
-  = form_with scope: :comment, url: polymorphic_path(@commentable, action: 'comment'), class: 'hidden',
-          html: { id: "new-comment-#{@commentable.id}" }, local: false, data: :json  do |f|
+  = form_with scope: :comment, url: polymorphic_path(commentable, action: 'comment'), 
+    class: 'hidden', html: { id: "new-comment-#{commentable.id}" }, 
+    local: false, data: { type: :json }  do |f|
     = f.label :body, 'Your comment'
     = f.text_area :body
 
