--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -7,3 +7,5 @@ div class='menu-box'
           = link_to  "Log out", destroy_user_session_path, class: 'nav-link', method: :delete
           = link_to  "List of Questions", questions_path, class: 'nav-link'
           = link_to  "List of Meeds", meeds_path, class: 'nav-link'
+    -if current_user
+      .text-secondary= current_user.email 
