--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -29,6 +29,6 @@ span id="question-block-#{question.id}"
   nav class='nav'
     = link_to 'View', question_path(question), class: 'nav-link'
     .qs-links
-    - if current_user&.author?(question)
+    - if can?(:edit, question)
       = link_to 'Edit', '', class: 'edit-question-link nav-link', data: { question_id: question.id }  
       = link_to "Delete", question, method: 'delete', remote: true, class: 'delete-question-link nav-link', data: { question_id: question.id, confirm: "Are you shure?" }
