--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,5 @@
-h1 List of questions  
-p= link_to 'Ask question', new_question_path
+h1 List of questions
+- if can?(:create, Question)  
+  p= link_to 'Ask question', new_question_path
 .questions
   = render @questions
