--- a/app/views/shared/_comment_form.html.slim
+++ b/app/views/shared/_comment_form.html.slim
@@ -1,10 +1,9 @@
 .comment-form-block.container-fluid.d-block
-  -if current_user
+  -if can?(:comment, commentable) #current_user
     = link_to 'Leave comment', commentable, 
       class: 'new-comment-link', 
       data: { commentable_id: commentable.id,
               block: commentable.class.name.downcase }
-    
 
   = form_with scope: :comment, url: polymorphic_path(commentable, action: 'comment'), 
     class: 'hidden', html: { id: "new-comment-#{commentable.id}" }, 
@@ -13,4 +12,3 @@
     = f.text_area :body
 
     = f.submit 'Save Comment', class: 'btn btn-info btn-sm'
-
