feat: task12, cancan was included  in the views

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -9,7 +9,7 @@
       =render 'shared/inner'
     .vote-question.conteniar-sm.col-md-3.mx-auto
       = render partial: 'shared/rating', locals: { voteable: @question} 
-      -if user_signed_in? && !current_user.author?(@question) 
+      -if can? :vote, Vote 
         =render partial: 'shared/vote', locals: { voteable: @question}
   .row.question-comments
     div class ="comments-question-#{ @question.id } col-md-12 row"
