--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -13,7 +13,7 @@ span id="answer-block-#{answer.id}"
           =render 'shared/inner'
       .conteniar-sm.col-md-2.mx-auto 
         = render partial: 'shared/rating', locals: { voteable: answer} 
-        -if user_signed_in? && !current_user.author?(answer) 
+        -if can? :vote, Vote
           =render partial: 'shared/vote', locals: { voteable: answer}
   .row.answer-comments
     div class ="comments-answer-#{ answer.id } col-md-12 row"
