--- a/app/views/subscriptions/create.js.erb
+++ b/app/views/subscriptions/create.js.erb
@@ -1,3 +1,3 @@
 <% if !@subscription.errors.present? %>
-    $("#question-block-<%= @question.id %>").find('.subscription').html('<%= j render 'shared/subscription', question: @question, subscription: @subscription %>');
+    $("#question-<%= @question.id %>").find('.subscription').html('<%= j render 'shared/subscription', question: @question, subscription: @subscription %>');
 <% end %>
