fix: task15, change pagination

--- a/app/views/query/new.html.slim
+++ b/app/views/query/new.html.slim
@@ -20,5 +20,7 @@ strong Search
       = f.label :all, 'Ful search'
     p
     = f.submit "Search" 
-.result_search
+.pagination.
 
+.result_search
+  
