feat: task15, implement tests

--- a/app/views/query/new.html.slim
+++ b/app/views/query/new.html.slim
@@ -17,10 +17,9 @@ strong Search
       = f.label :comments, 'Users'
     .form-check.form-check-inline
       = f.check_box :all, {}, 'all', nil 
-      = f.label :all, 'Ful search'
+      = f.label :all, 'Full search'
     p
     = f.submit "Search" 
-.pagination.
-
+.pagination
 .result_search
   
