fix: task15, rebuild design

--- a/app/views/meeds/index.html.slim
+++ b/app/views/meeds/index.html.slim
@@ -1,10 +1,11 @@
-h1 Achievements 
-.meeds-block
+.container.meeds-block
+  br
+  h3 Achievements 
   - if @meeds.present?
     table.table.table-secondary.table-striped.table-sm
       thead.table-dark
         tr.text-center
-          th Question
+          th.col-8 Question
           th Meed image
           th Meed name
       tbody
