--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,45 +1,51 @@
--@inner = answer 
 span id="answer-block-#{answer.id}"
-  span id="answer-errors-#{answer.id}"
-  
-  .row
-    .hstack.gap-2.border.border-info.m-1
+  -@inner = answer 
+  .border.border-primary.border-start-0.rounded-end.p-2.m-2    
+    span id="answer-errors-#{answer.id}"
+    
+    .row
+      .container.col-1
       -if answer.selected
-        .bg-success.conteniar-lg.col-md-10.mx-auto style="--bs-bg-opacity: .25"
-          br= "Best answer"
+        .container.col-8.mx-auto.bg-success.bg-opacity-10.border.border-info.border-end-0.rounded-start
+          br <b>Best answer</b>
           =render 'shared/inner'        
       -else
-        .mt-4.conteniar-sm.col-md-10.mx-auto  
+        .container.col-8.mx-auto.bg-warning.bg-opacity-10.border.border-info.border-end-0.rounded-start  
           =render 'shared/inner'
-      .conteniar-sm.col-md-2.mx-auto 
+      .container.col-1
+      .container.col-2.mx-auto 
         = render partial: 'shared/rating', locals: { voteable: answer} 
-        =render partial: 'shared/vote', locals: { voteable: answer}
-  .row.answer-comments
-    div class ="comments-answer-#{ answer.id } col-md-12 row"
-      h3 Comments
-      = render  "shared/comment_form", commentable: answer
-      .comments-slide.col-md-2
-      .comments.col-md-10.mx-auto
-        = render partial: "/shared/comment", collection: answer.comments
+        = render partial: 'shared/vote', locals: { voteable: answer}
 
-  .conteniar-sm.col-md-12.mx-auto    
-    =render 'answers/nav'
+    .container.form-edit.bg-secondary style="--bs-bg-opacity: .15"
+      = form_with model: answer, class: 'hidden p-2 m-2', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
+        div
+          = f.label :body, 'Your answer', class: "form-label"
+          p= f.text_area :body, class: "form-control form-control-sm m-2"
+        div
+          = f.label :files, class: "form-label"
+          p= f.file_field :files, multiple: true, class: "form-control form-control-sm m-2"
 
-  .container-xl.bg-secondary style="--bs-bg-opacity: .15"
-    = form_with model: answer, class: 'hidden pb-2 mb-4', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
-      div
-        = f.label :body, 'Your answer', class: "form-label"
-        p= f.text_area :body, class: "form-control form-control-sm m-2"
-      div
-        = f.label :files, class: "form-label"
-        p= f.file_field :files, multiple: true, class: "form-control form-control-sm m-2"
+        div class="links-add"
+          =f.fields_for :links do |link| 
+            =render 'shared/link_fields', f: link
+        = link_to_add_association 'add link', f, :links, 
+          class: 'btn btn-primary m-2', partial: 'shared/link_fields',
+          data: { association_insertion_node: '.links-add', 
+          association_insertion_method: :append } 
+        p= f.submit 'Save', class: 'btn btn-light'
 
-      div class="links-add"
-        =f.fields_for :links do |link| 
-          =render 'shared/link_fields', f: link
-      = link_to_add_association 'add link', f, :links, 
-        class: 'btn btn-primary m-2', partial: 'shared/link_fields',
-        data: { association_insertion_node: '.links-add', 
-        association_insertion_method: :append } 
+    .row
+      .container.col-1
+      .container.col-11.mx-auto    
+        =render 'answers/nav'
 
-      p= f.submit 'Save', class: 'btn btn-light'
+    .row.answer-comments.m-2
+      .container.col-2
+      .container.mx-auto.col-7.py-2
+        div class ="comments-answer-#{ answer.id }"
+          h6 Comments
+          = render  "shared/comment_form", commentable: answer
+          .comments.mx-auto
+            = render partial: "/shared/comment", collection: answer.comments
+
