change-4 manifest.js

--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -1,6 +1,6 @@
 div class='menu-box'
   nav class="navbar navbar-expand-sm navbar-dark bg-dark "
-    div class="container pe-3"
+    div class="container"
       div class="collapse navbar-collapse" id="navbarNavAltMarkup"
         div class="navbar-nav"
           = link_to  "Entry", new_user_session_path, class: 'nav-link'
