--- a/app/views/shared/_comment.html.slim
+++ b/app/views/shared/_comment.html.slim
@@ -1,3 +1,3 @@
   .comment-block.m-2.border.border-info.border-start-0.rounded-end.bg-secondary.bg-opacity-10
-    i= "#{comment.user.email} : #{ Time.now }"
+    i= "#{comment.user.email} : #{ comment.created_at }"
     p= comment.body
