fix: task17, fix assets

--- a/app/views/query/new.html.slim
+++ b/app/views/query/new.html.slim
@@ -21,6 +21,6 @@
       = f.label :all, 'Full search'
     p
     = f.submit "Search" 
-.pagination
-.result_search
+.pagination.container
+.result_search.container
   
