--- a/app/views/shared/_comment.html.slim
+++ b/app/views/shared/_comment.html.slim
@@ -1,3 +1,4 @@
-  .comment-block.m-2.border.border-info.border-start-0.rounded-end.bg-secondary.bg-opacity-10
+- cache comment do 
+  .comment-block.m-2.border.border-info.border-start-0.rounded-end.bg-secondary.bg-opacity-10.px-3
     i= "#{comment.user.email} : #{ comment.created_at }"
     p= comment.body
