--- a/app/views/shared/_comment_form.html.slim
+++ b/app/views/shared/_comment_form.html.slim
@@ -1,14 +1,15 @@
-.comment-form-block
-  -if can?(:comment, commentable)   
-    = link_to 'Leave comment', commentable, 
-      class: 'new-comment-link', 
-      data: { commentable_id: commentable.id,
-              block: commentable.class.name.downcase }
+- cache ['form_comment', commentable] do
+  .comment-form-block
+    -if can?(:comment, commentable)   
+      = link_to 'Leave comment', commentable, 
+        class: 'new-comment-link', 
+        data: { commentable_id: commentable.id,
+                block: commentable.class.name.downcase }
 
-  = form_with scope: :comment, url: polymorphic_path(commentable, action: 'comment'), 
-    class: 'hidden', html: { id: "new-comment-#{commentable.id}" }, 
-    local: false, data: { type: :json }  do |f|
-    = f.label :body, 'Your comment'
-    = f.text_area :body
+    = form_with scope: :comment, url: polymorphic_path(commentable, action: 'comment'), 
+      class: 'hidden', html: { id: "new-comment-#{commentable.id}" }, 
+      local: false, data: { type: :json }  do |f|
+      = f.label :body, 'Your comment'
+      = f.text_area :body
 
-    = f.submit 'Save Comment', class: 'btn btn-info btn-sm'
+      = f.submit 'Save Comment', class: 'btn btn-info btn-sm'
