--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,43 +2,44 @@
   -@inner = @question
   .question-errors
     = render 'shared/errors', resource: @question
-  .question-block data-question-id = @question.id id="question-#{@question.id}"  
-    h4.fw-light.fst-italic Question
-    .row
-      .container.mx-auto.col-9.bg-info.bg-opacity-10.border.border-info.border-end-0.rounded-start
-        .row.m-1  
-          .p-1.m-1.fw-bold = @question.title
-        .row.m-1
-          =render 'shared/inner'
-      .container.col-1
-      .container.mx-auto.col-2
-        .row 
-          .container.vote-question.mx-auto.mt-3
-            = render partial: 'shared/rating', locals: { voteable: @question} 
-            =render partial: 'shared/vote', locals: { voteable: @question}
+  - cache @question do
+    .question-block data-question-id = @question.id id="question-#{@question.id}"  
+      h4.fw-light.fst-italic Question
+      .row
+        .container.mx-auto.col-9.bg-info.bg-opacity-10.border.border-info.border-end-0.rounded-start
+          .row.m-1  
+            .p-1.m-1.fw-bold = @question.title
+          .row.m-1
+            =render 'shared/inner'
+        .container.col-1
+        .container.mx-auto.col-2
+          .row 
+            .container.vote-question.mx-auto.mt-3
+              = render partial: 'shared/rating', locals: { voteable: @question} 
+              =render partial: 'shared/vote', locals: { voteable: @question}
 
-        .row.mx-auto
-          .container.m-3
-          - if current_user
-            .subscription.d-grid.gap-2.mx-auto
-              = render 'shared/subscription', question: @question, subscription: @question.subscriptions.find_by(user: current_user)
+          .row.mx-auto
+            .container.m-3
+            - if current_user
+              .subscription.d-grid.gap-2.mx-auto
+                = render 'shared/subscription', question: @question, subscription: @question.subscriptions.find_by(user: current_user)
 
-    .row.question-comments.m-2
-      .container.col-2
-      .container.mx-auto.col-10.py-2
-        div class ="comments-question-#{ @question.id }"
-          h6 Comments
-          = render  "shared/comment_form", commentable: @question
-          .comments.mx-auto
-            = render partial: "/shared/comment", collection: @question.comments
+      .row.question-comments.m-2
+        .container.col-2
+        .container.mx-auto.col-10.py-2
+          div class ="comments-question-#{ @question.id }"
+            h6 Comments
+            = render  "shared/comment_form", commentable: @question
+            .comments.mx-auto
+              = render partial: "/shared/comment", collection: @question.comments
 
-  .container.mx-auto.m-2.p-2
-    -if !@question.answers.empty?
-      h4.fw-light.fst-italic Answers
-    .answer-errors
-      = render 'shared/errors', resource: @answer
-    .answers
-      = render partial: '/answers/answer', collection: @answers
+    .container.mx-auto.m-2.p-2
+      -if !@question.answers.empty?
+        h4.fw-light.fst-italic Answers
+      .answer-errors
+        = render 'shared/errors', resource: @answer
+      .answers
+        = render partial: '/answers/answer', collection: @answers
 
-  .container.bg-secondary.p-2 style="--bs-bg-opacity: .15"
-    = render 'form_answer'
+    .container.bg-secondary.p-2 style="--bs-bg-opacity: .15"
+      = render 'form_answer'
